<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_app">Application</string>
    <string name="about_app_text">"\t\t\tKAR-SAV Automation Application was created by KAR-SAV members within the KAR-SAV Software Team in order to facilitate communication between the club members and the club management as well as the club's business management.
        \n\n\t\t\tAll of your information within the club's automation system can only be displayed by our software developers in order to improve our application. No one other than the members responsible for the database, including the software team, is authorized to access your information.
        \n\n\t\t\tUpdates are published in order to make our application more useful. Stability improvements have been made with the published updates as well as visual enhancements. It is recommended to use the current version to get the most out of the application."</string>
    <string name="about_karsav">KAR-SAV</string>
    <string name="action_settings">Settings</string>
    <string name="apk_download" translatable="false">https://drive.google.com/drive/folders/1stSWQKtQ81oy3aUiID77tdCYoNpOjfAZ</string>
    <string name="app_name">KAR-SAV</string>
    <string name="assignment_all">New Assignments</string>
    <string name="assignment_done">All Assignments</string>
    <string name="assignment_mine">My Assignments</string>
    <string name="back">Go Back</string>
    <string name="check_text">Remember Me</string>
    <string name="clickOneMoreTimeToExit">Click back again to exit</string>
    <string name="connection_failed">Please Check Your Internet Connection</string>
    <string name="default_notification_channel_id">CHANNEL_1</string>
    <string name="department">Faculty - Department</string>
    <string name="duties">Assignments</string>
    <string name="finance_log">Log List</string>
    <string name="finance_log_list">Log List</string>
    <string name="finance_nothing_found">Nothing Found</string>
    <string name="finance_report">Report</string>
    <string name="finance_report_list">Report List</string>
    <string name="firestore_database_for_posts" translatable="false">Posts</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_popup_head">Password Renewal System</string>
    <string name="fragment_assignments_all_nothing">No Assignment Found</string>
    <string name="fragment_meetups_nothing">No Meetups Found</string>
    <string name="homepage_exit_no">NO</string>
    <string name="homepage_exit_yes">YES</string>
    <string name="homepage_sure">Are you sure you want to exit?</string>
    <string name="learn_more">\u0009Get Information\u0009</string>
    <string name="learn_more_explanation">\u0009\u0009\u0009KAR-SAV is a student club founded on 7.10.2017 by Karabük University students in order to increase the awareness of the defense industry and to increase the work done in this field.</string>
    <string name="learn_more_explanationd">\u0009\u0009\u0009It is to prepare an efficient working environment by supporting the ideas and projects of the people who are studying at our university and want to improve themselves in the field of Defense Technologies.</string>
    <string name="learn_more_text">Our Mission</string>
    <string name="learn_more_text_two">"\u0009\u0009\u0009KAR-SAV is composed of students who are gathered together to carry the heritage of Ataturk, in the most beautiful way, a step further and the flag he left us, students who hug Ataturk's principles and reforms, who indigenize patriotism within the limit of morals, who want to improve themselves in the field and who try to learn the Defence Industry that is of capital importance for both Turkey and the world economy. It will provide its young and dynamic structure with a growing network of students alongside the skeleton crew. It supports students with projects, activities and working groups considering their technical and personal development."</string>
    <string name="learn_more_text_twod">\u0009\u0009\u0009Our aim is to ensure our students who are studying at our university and who want to improve themselves in the field of Defense Industry under a single roof; To introduce Turkish Defense Industry and its examples at our university and our city; To create a community that can be a reference to our friends who graduated from our university</string>
    <string name="learn_more_textd">Our Aims</string>
    <string name="learn_more_title">Who Are We?</string>
    <string name="learn_more_titled">Our Vision</string>
    <string name="log_out">Log Out</string>
    <string name="login_button">Login</string>
    <string name="mail">E-mail</string>
    <string name="mainactivity_blank">Please Fill in the Blanks Properly</string>
    <string name="mainactivity_connection">Please check your internet connection</string>
    <string name="mainactivity_progress_message">Please Wait</string>
    <string name="mainactivity_progress_title">Signing In</string>
    <string name="mainactivity_welcome">Welcome!</string>
    <string name="mainactivity_wrong">Incorrect ID or Password</string>
    <string name="meetings">Meet-ups</string>
    <string name="menu_about">About</string>
    <string name="my_authorizations">Authorizations</string>
    <string name="my_finance">Finance</string>
    <string name="my_profile">Profile</string>
    <string name="my_projects">My Projects</string>
    <string name="my_projects_none">No Projects Found</string>
    <string name="name_surname">Name Surname</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Position</string>
    <string name="nav_header_title">Name Surname</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_version_available">New Version Available</string>
    <string name="new_version_text">We recommend you to use the newest version to get the most out of the application.</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="post_create_blank">You can not send an empty post</string>
    <string name="post_create_text">Input Your Text Here</string>
    <string name="post_delete_dialog_message">Deletion is permanent</string>
    <string name="post_delete_dialog_title">Are you sure to delete?</string>
    <string name="post_deleted_succesfully">Post Deleted!</string>
    <string name="post_not_deleted">Post could not be deleted</string>
    <string name="post_updated_succesfully">Post update is successful</string>
    <string name="posts">Posts</string>
    <string name="post_create_bar_title">Create A Post</string>
    <string name="projects">Projects</string>
    <string name="projects_my_project_list">My Projects</string>
    <string name="projects_none">No Projects Found</string>
    <string name="projects_project_list">Projects</string>
    <string name="recycle_text_for_all">Text</string>
    <string name="recycle_title_for_all">Title</string>
    <string name="register">Registers</string>
    <string name="register_none">No Registration Found</string>
    <string name="register_official_list">Official</string>
    <string name="register_references">References</string>
    <string name="register_user_list">User List</string>
    <string name="search_menu_title" tools:ignore="PrivateResource">Search</string>
    <string name="search_menu_titles">Search</string>
    <string name="separator">------------------------------</string>
    <string name="sign_up">Don\'t have an account yet? Sign up!</string>
    <string name="sign_up_blank">Please Fill in the Blanks Properly</string>
    <string name="social_media_accounts">Our Social Media Accounts</string>
    <string name="tab_meetup_text_2">All Meetups</string>
    <string name="tab_meetup_text_3">Attended</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="time_invalid">---,--:--</string>
    <string name="title_activity_home_page">KAR-SAV</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="user">User Id</string>
    <string name="new_message">A new post has just been shared.</string>
    <string name="this_version">Current Version: %1$s</string>
    <string name="update_for">Update is For: %1$s</string>
    <string name="aviation">Aviation</string>
    <string name="ground">Ground</string>
    <string name="marine">Marine</string>
    <string name="cyber">Cyber</string>
    <string name="member">Member</string>
    <string name="officials">Officials</string>
    <string name="admin">Project Manager</string>
    <string name="description">Description</string>
    <string name="creator">Creator</string>
    <string name="content">Content</string>
    <string name="topic">Topic</string>
    <string name="decisions">Decisions</string>
    <string name="invitees">Invitees</string>
    <string name="given_date">Date of Issue: %1$s</string>
    <string name="given_dates">Date of Issue</string>
    <string name="due_dated">Due Date: %1$s</string>
    <string name="due_dates">Due Date</string>
    <string name="date_saved">Date Saved: %1$s</string>
    <string name="date_saveds">Date Saved</string>
    <string name="returns">Returns</string>
    <string name="dates">Dates</string>
    <string name="responsible">Individual Responsible</string>
    <string name="receipt">Receipt</string>
    <string name="total_amount">Total Amount</string>
    <string name="share">Share The App</string>
    <string name="invitation_message">KAR-SAV Mobile Automation Application</string>
    <string name="visit">Visit the APK</string>
    <string name="download">Download</string>
    <string name="posts_for_subscription" translatable="false">Posts</string>
    <string name="post_shared">Post is shared</string>
    <string name="add_member">Add Member</string>
    <string name="add_reference">Add Reference</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="institution">Institution</string>
    <string name="profession">Profession</string>
    <string name="reference_person">Reference Person</string>
    <string name="addreference">Add Reference</string>
    <string name="explanation">Explanation</string>
    <string name="name_surname_empty">Name and surname sections cannot be left blank.</string>
    <string name="register_reference_progress_title">Adding</string>
    <string name="register_reference_progress_message">This process may take a while.</string>
    <string name="reference_added">Reference is added</string>
    <string name="student_no">Student Number</string>
    <string name="projects_name">Project Name</string>
    <string name="projects_admin">Project Manager</string>
    <string name="projects_members">Project Members</string>
    <string name="projects_explanation">Project Explanation</string>
    <string name="project">Project</string>
    <string name="check">Check</string>
    <string name="password_renewal_contact_us">If your information cannot be checked, contact us by clicking this text!</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_text">When turned off, you will no longer receive notifications when a new post is shared. Yet, this does not completely prevents this app from showing notifications.</string>
    <string name="text_size">Text Size</string>
    <string name="version_control">Version Control</string>
    <string name="club_management">Club Management</string>
    <string name="social">Social Network</string>
    <string name="contact_us">Contact Us</string>
    <string name="users">Users</string>
</resources>