<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <item android:title="@string/menu_about">
        <menu>
            <item
                android:id="@+id/action_info"
                android:orderInCategory="100"
                android:title="@string/about_karsav"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_info_app"
                android:orderInCategory="100"
                android:title="@string/about_app"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>
