<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".PasswordReset">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:logo="@drawable/ic_chevron_left_black_24dp"
        app:title="@string/forgot_popup_head"
        app:titleMarginStart="40dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/karsav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10.0sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name"
                android:textColor="@color/md_black_1000"
                android:textSize="40.0sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/nameSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/name"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="10.0sp"
                android:hint="@string/name_surname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="RtlHardcoded,UnusedAttribute" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/mail"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="10.0sp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="Autofill,RtlHardcoded" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/phone"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10.0sp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <EditText
                android:id="@+id/student_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/y"
                android:drawableLeft="@drawable/y"
                android:drawablePadding="10.0sp"
                android:hint="@string/student_no"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/user_id"
                android:drawableLeft="@drawable/user_id"
                android:drawablePadding="10.0sp"
                android:hint="@string/user"
                android:textColor="@color/colorPrimaryDark"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <Button
                android:id="@+id/check"
                android:layout_width="200.0sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0sp"
                android:layout_marginBottom="15.0sp"
                android:background="@drawable/button_style_4"
                android:text="@string/check"
                android:textColor="@color/red" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/password_renewal_contact_us"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="gone" />

</LinearLayout>