<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Update">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:title="@string/update"
        app:titleMarginStart="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/new_version_available"
                android:textColor="@color/md_black_1000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/this_version"
                android:textColor="@color/md_black_1000" />

            <TextView
                android:id="@+id/update_is_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/update_for"
                android:textColor="@color/md_black_1000" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/visit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/turquoise"
                    android:elevation="2dp"
                    android:text="@string/visit"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/download"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/turquoise"
                    android:elevation="2dp"
                    android:text="@string/download"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>